Fixed spacing between posts

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -92,7 +92,7 @@ $font-family-base: "Roboto", "Hiragino Sans GB", "冬青黑", "Microsoft YaHei",
 $font-family-title: $font-family-base;
 $font-family-logo: $font-family-base;
 $font-family-content: "Noto Serif", "Hiragino Sans GB", "冬青黑", "Microsoft YaHei", "微软雅黑", "SimSun", "宋体", serif;
-$font-family-mono: "Source Code Pro", monospace;
+$font-family-mono: monospace;
 
 // Typography - weights
 $font-weight-light: 300;
